tambahkan basic upload storage

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ REDIS_PASSWORD=
 # JWT Configuration
 JWT_SECRET=your-secret-key-change-in-production
 JWT_EXPIRATION=24
+
+# Storage File
+STORAGE_BASE_PATH=./storage
+STORAGE_BASE_URL=http://localhost:8080
